# sdl-engine

./: .gitignore  .gitmodules  README.md
examples/android/: README.md  gradle.properties
examples/android/app/jni/: Android.mk  Application.mk  CMakeLists.txt  SDL
examples/android/app/jni/src/: Android.mk  CMakeLists.txt  YourSourceHere.c  game_2048.c
examples/game_2048/: AUGMENTED_PLAN.md  build.sh  game_2048.c
examples/game_2048/android/: CMakeLists.txt  build.sh
examples/game_2048/linux/: CMakeLists.txt  build.sh  run.sh
examples/merge_and_devour/: build.sh  merge_and_devour.c
scripts/toolchain/: osxcross.cmake  setup_osxcross.sh
tests/blue_screen/: test_render.c
tests/blue_screen/android/: CMakeLists.txt  README.md  build.sh  test_android.c
tests/blue_screen/ios/: README.md
tests/blue_screen/ios/TestRender/Resources/: Info.plist
tests/blue_screen/ios/TestRender/Source/: test_render.cpp
tests/blue_screen/ios/TestRender/TestRender.xcodeproj/: project.pbxproj
tests/blue_screen/ios/TestRender/TestRender.xcodeproj/project.xcworkspace/xcuserdata/furkanbostanci.xcuserdatad/: UserInterfaceState.xcuserstate
tests/blue_screen/ios/TestRender/TestRender.xcodeproj/xcuserdata/furkanbostanci.xcuserdatad/xcschemes/: xcschememanagement.plist
tests/blue_screen/linux/: build.sh
tests/blue_screen/mac/: build.sh
tests/blue_screen/mac/TestRender/: CMakeLists.txt  test_render.cpp
tests/blue_screen/macos/: CMakeLists.txt  build.sh
tests/blue_screen/webgpu/: CMakeLists.txt  build.sh  test_webgpu.c
